--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <li>Bakchodi</li>
     </ol>
 
-    <h3><a href="Favouriteanime.html">Favourite Anime</a></h3>
+    <h3><a href="favouriteanime.html">Favourite Anime</a></h3>
 
     <hr size="3" noshade>
     <h3><u>My contacts</u></h3>
@@ -212,7 +212,7 @@
         <li>LinkedIn: <a href="https://www.linkedin.com/in/rishikesh-kumar-14407a232/" target="_blank">rishikesh-kumar-14407a232</a></li> 
     </ul>
     
-    <h3><a href="Contactme.html" target="_blank"><strong><em>Contact me</em></strong></a></h3>
+    <h3><a href="contactme.html" target="_blank"><strong><em>Contact me</em></strong></a></h3>
     
 </body>
 </html>
